tools/juliapkg/src/api.jl


DUCKDB_API duckdb_state duckdb_bind_timestamp(duckdb_prepared_statement prepared_statement, idx_t param_idx,
                                              duckdb_timestamp val);
"""
function duckdb_bind_timestamp(prepared_statement, param_idx, val)
    return ccall(
        (:duckdb_bind_timestamp, libduckdb),
        Int32,
        (Ptr{Cvoid}, Int32, Int32),
        prepared_statement,
        param_idx,
        val,
    )
end

"""
Binds a duckdb_interval value to the prepared statement at the specified index.

DUCKDB_API duckdb_state duckdb_bind_interval(duckdb_prepared_statement prepared_statement, idx_t param_idx,
                                             duckdb_interval val);
"""
function duckdb_bind_interval(prepared_statement, param_idx, val)
    return ccall(
        (:duckdb_bind_interval, libduckdb),
        Int32,
        (Ptr{Cvoid}, Int32, Int32),
        prepared_statement,
        param_idx,
        val,
    )
end

"""
Binds a null-terminated varchar value to the prepared statement at the specified index.

DUCKDB_API duckdb_state duckdb_bind_varchar(duckdb_prepared_statement prepared_statement, idx_t param_idx,
                                            const char *val);
"""
function duckdb_bind_varchar(prepared_statement, param_idx, val)
    return ccall(
        (:duckdb_bind_varchar, libduckdb),
        Int32,
        (Ptr{Cvoid}, Int32, Ptr{UInt8}),
        prepared_statement,
        param_idx,
        val,
    )
end

"""
Binds a varchar value to the prepared statement at the specified index.

DUCKDB_API duckdb_state duckdb_bind_varchar_length(duckdb_prepared_statement prepared_statement, idx_t param_idx,
                                                   const char *val, idx_t length);
"""
function duckdb_bind_varchar_length(prepared_statement, param_idx, val, length)
    return ccall(
        (:duckdb_bind_varchar_length, libduckdb),
        Int32,
        (Ptr{Cvoid}, Int32, Ptr{UInt8}, Int32),
        prepared_statement,
        param_idx,
        val,
        length,
    )
end

"""
Binds a blob value to the prepared statement at the specified index.

DUCKDB_API duckdb_state duckdb_bind_blob(duckdb_prepared_statement prepared_statement, idx_t param_idx,
                                         const void *data, idx_t length);
"""
function duckdb_bind_blob(prepared_statement, param_idx, val, length)
    return ccall(
        (:duckdb_bind_blob, libduckdb),
        Int32,
        (Ptr{Cvoid}, Int32, Ptr{Cvoid}, Int32),
        prepared_statement,
        param_idx,
        data,
        length,
    )
end

"""
Binds a NULL value to the prepared statement at the specified index.

DUCKDB_API duckdb_state duckdb_bind_null(duckdb_prepared_statement prepared_statement, idx_t param_idx);
"""
function duckdb_bind_null(prepared_statement, param_idx)
    return ccall(
        (:duckdb_bind_null, libduckdb),
        Int32,
        (Ptr{Cvoid}, Int32),
        prepared_statement,
        param_idx,
    )
end

"""
Executes the prepared statement with the given bound parameters, and returns a materialized query result.

This method can be called multiple times for each prepared statement, and the parameters can be modified
between calls to this function.

* prepared_statement: The prepared statement to execute.
* out_result: The query result.
* returns: `DuckDBSuccess` on success or `DuckDBError` on failure.

DUCKDB_API duckdb_state duckdb_execute_prepared(duckdb_prepared_statement prepared_statement,
                                                duckdb_result *out_result);
"""
function duckdb_execute_prepared(prepared_statement, out_result)
    return ccall(
        (:duckdb_execute_prepared, libduckdb),
        Int32,
        (Ptr{Cvoid}, Ptr{Cvoid}),
        prepared_statement,
        out_result,
    )
end

"""
Executes the prepared statement with the given bound parameters, and returns an arrow query result.

* prepared_statement: The prepared statement to execute.
* out_result: The query result.
* returns: `DuckDBSuccess` on success or `DuckDBError` on failure.

DUCKDB_API duckdb_state duckdb_execute_prepared_arrow(duckdb_prepared_statement prepared_statement,
                                                      duckdb_arrow *out_result);
"""
function duckdb_execute_prepared_arrow(prepared_statement, out_result)
    return ccall(
        (:duckdb_execute_prepared_arrow, libduckdb),
        Int32,
        (Ptr{Cvoid}, Ptr{Cvoid}),
        prepared_statement,
        out_result,
    )
end

#=
//===--------------------------------------------------------------------===//
// Appender
//===--------------------------------------------------------------------===//

// Appenders are the most efficient way of loading data into DuckDB from within the C interface, and are recommended for
// fast data loading. The appender is much faster than using prepared statements or individual `INSERT INTO` statements.

// Appends are made in row-wise format. For every column, a `duckdb_append_[type]` call should be made, after which
// the row should be finished by calling `duckdb_appender_end_row`. After all rows have been appended,
// `duckdb_appender_destroy` should be used to finalize the appender and clean up the resulting memory.

// Note that `duckdb_appender_destroy` should always be called on the resulting appender, even if the function returns
// `DuckDBError`.
=#

"""
Creates an appender object.

* connection: The connection context to create the appender in.
* schema: The schema of the table to append to, or `nullptr` for the default schema.
* table: The table name to append to.
* out_appender: The resulting appender object.
* returns: `DuckDBSuccess` on success or `DuckDBError` on failure.

DUCKDB_API duckdb_state duckdb_appender_create(duckdb_connection connection, const char *schema, const char *table,
                                               duckdb_appender *out_appender);
"""
function duckdb_appender_create(connection, schema, table, out_appender)
    return ccall(
        (:duckdb_appender_create, libduckdb),
        Int32,
        (Ptr{Cvoid}, Ptr{UInt8}, Ptr{UInt8}, Ptr{Cvoid}),
        connection[],
        schema,
        table,
        out_appender,
    )
end

"""
Returns the error message associated with the given appender.
If the appender has no error message, this returns `nullptr` instead.

The error message should not be freed. It will be de-allocated when `duckdb_appender_destroy` is called.

* appender: The appender to get the error from.
* returns: The error message, or `nullptr` if there is none.

DUCKDB_API const char *duckdb_appender_error(duckdb_appender appender);
"""
function duckdb_appender_error(appender)
    return ccall((:duckdb_appender_error, libduckdb), Ptr{UInt8}, (Ptr{Cvoid},), appender[])
end

"""
Flush the appender to the table, forcing the cache of the appender to be cleared and the data to be appended to the
base table.

This should generally not be used unless you know what you are doing. Instead, call `duckdb_appender_destroy` when you
are done with the appender.

* appender: The appender to flush.
* returns: `DuckDBSuccess` on success or `DuckDBError` on failure.

DUCKDB_API duckdb_state duckdb_appender_flush(duckdb_appender appender);
"""
function duckdb_appender_flush(appender)
    return ccall((:duckdb_appender_flush, libduckdb), Int32, (Ptr{Cvoid},), appender[])
end

"""
Close the appender, flushing all intermediate state in the appender to the table and closing it for further appends.

This is generally not necessary. Call `duckdb_appender_destroy` instead.

* appender: The appender to flush and close.
* returns: `DuckDBSuccess` on success or `DuckDBError` on failure.

DUCKDB_API duckdb_state duckdb_appender_close(duckdb_appender appender);
"""
function duckdb_appender_close(appender)
    return ccall((:duckdb_appender_close, libduckdb), Int32, (Ptr{Cvoid},), appender[])
end

"""
Close the appender and destroy it. Flushing all intermediate state in the appender to the table, and de-allocating
all memory associated with the appender.

* appender: The appender to flush, close and destroy.
* returns: `DuckDBSuccess` on success or `DuckDBError` on failure.

DUCKDB_API duckdb_state duckdb_appender_destroy(duckdb_appender *appender);
"""
function duckdb_appender_destroy(appender)
    return ccall((:duckdb_appender_destroy, libduckdb), Int32, (Ptr{Ptr{Cvoid}},), appender)
end

"""
A nop function, provided for backwards compatibility reasons. Does nothing. Only `duckdb_appender_end_row` is required.

DUCKDB_API duckdb_state duckdb_appender_begin_row(duckdb_appender appender);
"""
function duckdb_appender_begin_row(appender)
    return ccall((:duckdb_appender_begin_row, libduckdb), Int32, (Ptr{Cvoid},), appender[])
end

"""
Finish the current row of appends. After end_row is called, the next row can be appended.

* appender: The appender.
* returns: `DuckDBSuccess` on success or `DuckDBError` on failure.

DUCKDB_API duckdb_state duckdb_appender_end_row(duckdb_appender appender);
"""
function duckdb_appender_end_row(appender)
    return ccall((:duckdb_appender_end_row, libduckdb), Int32, (Ptr{Cvoid},), appender[])
end

"""
Append a bool value to the appender.

DUCKDB_API duckdb_state duckdb_append_bool(duckdb_appender appender, bool value);
"""
function duckdb_append_bool(appender, value)
    return ccall(
        (:duckdb_append_bool, libduckdb),
        Int32,
        (Ptr{Cvoid}, Int32),
        appender[],
        value,
    )
end

"""
Append an int8_t value to the appender.

DUCKDB_API duckdb_state duckdb_append_int8(duckdb_appender appender, int8_t value);
"""
function duckdb_append_int8(appender, value)
    return ccall(
        (:duckdb_append_int8, libduckdb),
        Int32,
        (Ptr{Cvoid}, Int16),
        appender[],
        value,
    )
end

"""
Append an int16_t value to the appender.

DUCKDB_API duckdb_state duckdb_append_int16(duckdb_appender appender, int16_t value);
"""
function duckdb_append_int16(appender, value)
    return ccall(
        (:duckdb_append_int16, libduckdb),
        Int32,
        (Ptr{Cvoid}, Int16),
        appender[],
        value,
    )
end

"""
Append an int32_t value to the appender.

DUCKDB_API duckdb_state duckdb_append_int32(duckdb_appender appender, int32_t value);
"""
function duckdb_append_int32(appender, value)
    return ccall(
        (:duckdb_append_int16, libduckdb),
        Int32,
        (Ptr{Cvoid}, Int32),
        appender[],
        value,
    )
end

"""
Append an int64_t value to the appender.

DUCKDB_API duckdb_state duckdb_append_int64(duckdb_appender appender, int64_t value);
"""
function duckdb_append_int64(appender, value)
    return ccall(
        (:duckdb_append_int64, libduckdb),
        Int32,
        (Ptr{Cvoid}, Int64),
        appender[],
        value,
    )
end

"""
Append a duckdb_hugeint value to the appender.

DUCKDB_API duckdb_state duckdb_append_hugeint(duckdb_appender appender, duckdb_hugeint value);
"""
function duckdb_append_hugeint(appender, value)
    return ccall(
        (:duckdb_append_hugeint, libduckdb),
        Int32,
        (Ptr{Cvoid}, Int64),
        appender[],
        value,
    )
end

"""
Append a uint8_t value to the appender.

DUCKDB_API duckdb_state duckdb_append_uint8(duckdb_appender appender, uint8_t value);
"""
function duckdb_append_uint8(appender, value)
    return ccall(
        (:duckdb_append_uint8, libduckdb),
        Int32,
        (Ptr{Cvoid}, UInt16),
        appender[],
        value,
    )
end

"""
Append a uint16_t value to the appender.

DUCKDB_API duckdb_state duckdb_append_uint16(duckdb_appender appender, uint16_t value);
"""
function duckdb_append_uint16(appender, value)
    return ccall(
        (:duckdb_append_uint16, libduckdb),
        Int32,
        (Ptr{Cvoid}, UInt16),
        appender[],
        value,
    )
end

"""
Append a uint32_t value to the appender.
